--- a/Python/Quest01/250108_Aiffel.ipynb
+++ b/Python/Quest01/250108_Aiffel.ipynb
@@ -92,7 +92,7 @@
         "id": "qfloE5zfiZLf",
         "outputId": "634ce1ac-c6b1-4147-d6e2-fdcae02c3f2d"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,6 +101,38 @@
             "입력값 : zxccxz\n",
             "뒤집힌 단어는 : zxccxz\n",
             "입력된 단어는 회문입니다\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 솔루션3\n",
+        "\n",
+        "word = list(input(\"입력값 : \"))\n",
+        "rev_word = list(reversed(word))\n",
+        "\n",
+        "if(word == rev_word):\n",
+        "  print(\"회문입니다\")\n",
+        "else:\n",
+        "  print(\"회문이 아닙니다\")"
+      ],
+      "metadata": {
+        "id": "U9Cwfw5DzD_i",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "330cf340-f301-4bdc-82c5-685b95cb368a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "입력값 : 다리그리고저고리그리다\n",
+            "회문입니다\n"
           ]
         }
       ]
