--- a/MainQuest/Quest02/0207Mainquest.ipynb
+++ b/MainQuest/Quest02/0207Mainquest.ipynb
@@ -4924,7 +4924,7 @@
    "id": "d3806ba4",
    "metadata": {},
    "source": [
-    "## 전처리한 데이터셋 대신, 복사해둔 original_data를 활용하여 베이스라인 모델을 만들기\n",
+    "## Feature Engineering이 수행되기 전 데이터의 Decision Tree 모델 만들기\n",
     "모델에 투입하기 전에 문자열 데이터는 제외하고, Target에 해당하는 Legendary 칼럼은 따로 구분하였음\n",
     "X = 문자열과 target이 제거된 칼럼\n",
     "y = target(Legendary)"
@@ -5240,6 +5240,7 @@
    "id": "950c5703",
    "metadata": {},
    "source": [
+    "## 기본 모델 분석\n   ",
     "160개 학습 데이터 가운데 틀린 판단인 FP, FN은 각각 3, 5로 총 8개임\n",
     "정확도 = (TP+TN) / (TP+TN+FP+FN)이므로\n",
     "위의 경우 152 / 160 = 0.95이므로 이에 따른 정확도는 95%임\n",
@@ -5279,8 +5280,9 @@
    "id": "eb70d5cc",
    "metadata": {},
    "source": [
-    "recall값이 낮다는 의미는 Negative로 잘못 예측한 비율이 높다는 의미이므로 즉 전설의 포켓몬을 일반 포켓몬으로 판단한 경우가 많다는 의미임\n",
-    "데이터셋 가운데 Target의 수가 불균형하므로 적은 양의 Positive를 정확히 예측해야 함\n",
+    "recall값이 낮다는 의미는 Negative로 잘못 예측한 비율이 높다는 의미이므로 즉 전설의 포켓몬을 일반 포켓몬으로 판단한 경우가 많다는 의미임\n   ",
+    "데이터셋 가운데 Target의 수가 불균형하므로 적은 양의 Positive를 정확히 예측해야 함\n   ",
+    "## Feature Engineering이 수행된 베이스라인 모델 구성\n   "
     "아래는 전처리를 거친 데이터를 다시 활용하는 과정임"
    ]
   },
@@ -5692,7 +5694,10 @@
    "id": "c5ec1431",
    "metadata": {},
    "source": [
-    "recall값이 0.92까지 증가하였음"
+    "### 베이스라인 모델 분석   "
+    "recall값이 0.92까지 증가하였음"   
+    "즉 True Positive를 더 잘 찾아내고 False Negative를 낮추었다는 의미이므로,\n   "
+    "불균형한 데이터셋에 대해 정확도를 높이고자 했던 기존의 목적을 어느정도 달성하였음    "
    ]
   },
   {
@@ -5752,7 +5757,7 @@
    "source": [
     "feature 가운데 0과 1 사이로 정규화되지 않은 데이터들에 대해 마저 정규화를 진행하기 위해 StandardScaler를 import하였음\n",
     "정규화된 데이터를 새로운 변수명에 지정하였음\n",
-    "(결정트리에서 이 작업이 필요하지 않았던 이유?)"
+    "(결정트리에서는 데이터 개별 특성의 크기나 단위에 영향을 받지 않아서 정규화가 필요하지 않았음)"
    ]
   },
   {
