--- a/MainQuest/Quest02/0207Mainquest.ipynb
+++ b/MainQuest/Quest02/0207Mainquest.ipynb
@@ -4924,7 +4924,7 @@
    "id": "d3806ba4",
    "metadata": {},
    "source": [
-    "## 전처리한 데이터셋 대신, 복사해둔 original_data를 활용하여 베이스라인 모델을 만들기\n",
+    "## 전처리한 데이터셋 대신, 복사해둔 original_data를 활용하여 기본 모델 만들기\n",
     "모델에 투입하기 전에 문자열 데이터는 제외하고, Target에 해당하는 Legendary 칼럼은 따로 구분하였음\n",
     "X = 문자열과 target이 제거된 칼럼\n",
     "y = target(Legendary)"
